# semestral_project_PA2_2023

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile  prohlaseni.txt  zadani.txt
src/: CAction.cpp  CAction.h  CActivateBuildingAction.cpp  CActivateBuildingAction.h  CApp.cpp  CApp.h  CBuilding.cpp  CBuilding.h  CCataclysmicEvent.cpp  CCataclysmicEvent.h  CDeActivateBuildingAction.cpp  CDeActivateBuildingAction.h  CDeposit.cpp  CDeposit.h  CDestroyBuildingsAction.cpp  CDestroyBuildingsAction.h  CEndgameScenarios.cpp  CEndgameScenarios.h  CFactory.cpp  CFactory.h  CFarm.cpp  CFarm.h  CGame.cpp  CGame.h  CInHandler.cpp  CInHandler.h  CInputHandlerAi.cpp  CInputHandlerAi.h  CJsonCheck.cpp  CJsonCheck.h  CMine.cpp  CMine.h  CPlayer.cpp  CPlayer.h  CPlayerInputHandler.cpp  CPlayerInputHandler.h  CPlayerStats.cpp  CPlayerStats.h  CPosition.cpp  CPosition.h  (+3 more)
